# trip-service-kata

c++/: CMakeLists.txt  TripService_Original.cpp
c++/src/: CMakeLists.txt  TripService.cpp  UserSession.cpp
c++/test/: CMakeLists.txt  TripServiceTest.cpp  UserTest.cpp  compileTest.cpp
